--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <section id="home">
-        
+
         <header>
-            <a href="#"><img  src="me.jpg" alt=""></a>
+            <a href="#"><img src="me.jpg" alt=""></a>
             <ul id="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About us</a></li>
@@ -21,14 +21,22 @@
                 <li><a href="#product">Product</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            
+
         </header>
         <h1>This Is Home</h1>
     </section>
-    <section id="about"><h1>This Is About</h1></section>
-    <section id="pricing"><h1>This Is Pricing</h1></section>
-    <section id="product"><h1>This Is Product</h1></section>
-    <section id="contact"><h1>This Is Contact</h1></section>
+    <section id="about">
+        <h1>This Is About</h1>
+    </section>
+    <section id="pricing">
+        <h1>This Is Pricing</h1>
+    </section>
+    <section id="product">
+        <h1>This Is Product</h1>
+    </section>
+    <section id="contact">
+        <h1>This Is Contact</h1>
+    </section>
 </body>
 
 </html>
