--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One page website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 
 <body>
     <section id="home">
 
         <header>
-            <a href="#"><img src="me.jpg" alt=""></a>
+            <a href="#"><img src="img/me.jpg" alt=""></a>
             <ul id="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About us</a></li>
